nginx/grpc-and-http-ingress/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-app
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      run: web-app
  template:
    metadata:
      labels:
        run: web-app
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: IfNotPresent
        name: web-app
        ports:
        - containerPort: 8080
          protocol: TCP
