nginx/grpc-and-http-ingress/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: ingress-nginx
spec:
  selector:
    run: web-app
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
