nginx/grpc-and-http-ingress/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: ingress-nginx
spec:
  backend:
    serviceName: web-service
    servicePort: 8080
